keep working on services and entities